www/static_data/css/style.css
body
{
    height: 100%;
    background-color:#1F2833;
    margin: 0 auto;
}

.champBox {
    height: auto;
    width: auto;
    max-width: 60px;
    min-width: 60px;
    min-height: 60px;
    margin: 5px;
    overflow: hidden;
    display: block;
}

.champBox:hover {
    cursor: pointer;
}
img {
    max-width: 100%;
    max-height: 100%;   
}

.champBoxSection{
    background-color: black;
    width: 50%;
    left: 40%;
    padding-left: .5%;
    padding-right: .5%;
    min-height: 100%;
    position: absolute;
    display: inline-block;
}

.winrateSection {
    width: 27.5%;
    height: 100%;
    left: 10%;
    background-color: black;
    position: absolute;
    display: inline-block;
}

.championIcons {
    display: block;
}

.champBoxBuffer {
    width: 80px;
    display: inline-block;
}

.champBoxName {
    display: block;
}

